
syntax = "proto3";
package kardiachain.crypto;

option go_package = "github.com/kardiachain/go-kardia/proto/kardiachain/crypto";


// PublicKey defines the keys available for use with Kardiachain Validators
message PublicKey {
  oneof sum {
    bytes ecdsa = 1;
  }
}